`feat: 인증 및 JWT 관련 로직 추가 및 기존 데이터 소스 설정 분리`
- `JwtUtil` 및 `CookieUtil` 유틸 클래스 추가로 JWT 생성, 검증 및 쿠키 관리 기능 구현
- `JwtConfig` 및 `DataSourceConfiguration`으로 인증 설정 및 데이터 소스 환경별 분리
- `AuthController`에서 세션 기반 인증 로직을 JWT 기반으로 변경
- `DefectServiceImpl`, `DefectRepository` 수정으로 주간 데이터 통계 조회 오류 해결
- `UserRepository`에 `unlockAccount` 및 사용자 존재 여부 확인 메서드 추가
- Hibernate 설정 일부 수정 및 쿠키 정책 추가 (환경별로 Secure/SameSite 설정 차별화)